--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "kanoe.studio/"
+baseURL = "https://kanoe.studio/"
 languageCode = "jp"
 title = "Kanoe Studio"
 theme = "hugo-theme-prav"
